[metadata]
name = qrules
description = Rule-based particle reaction problem solver on a quantum number level
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/qrules/issues
    Changelog = https://github.com/ComPWA/qrules/releases
    Documentation = https://qrules.rtfd.io
    Source = https://github.com/ComPWA/qrules
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    jsonschema
    particle
    python-constraint
    PyYAML
    tqdm >=4.24.0  # autonotebook
    typing-extensions; python_version <"3.10.0"  # typing.TypeAlias
packages = find:
package_dir =
    =src

[options.extras_require]
viz =
    graphviz
all =
    %(viz)s
doc =
    %(viz)s
    importlib-metadata; python_version <"3.8.0"
    myst-nb  # nb_ configuration prefixes
    Sphinx >=3
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-comments
    sphinx-copybutton
    sphinx-design
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphinxcontrib-hep-pdgref
    sphobjinv
test =
    ipython
    nbmake
    nbmake !=1.3.*  # https://github.com/ComPWA/qrules/actions/runs/4116315964/jobs/7106216956#step:3:84
    nbmake !=1.4.*  # https://github.com/ComPWA/qrules/actions/runs/4115785437/jobs/7104974879#step:3:82
    pydot
    pytest
    pytest-cov
    pytest-profiling
    pytest-xdist
format =
    black
mypy =
    mypy >=0.730  # attrs and error code support
    types-docutils
    types-pkg-resources
    types-PyYAML
    types-requests
    types-setuptools
lint =
    %(mypy)s
    ruff; python_version >="3.7.0"
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
jupyter =
    aquirdturtle-collapsible-headings
    ipywidgets
    jupyterlab
    jupyterlab-code-formatter
    jupyterlab-myst; python_version >="3.7.0"
    ypy-websocket <0.8.3; python_version >="3.7.0"  # https://github.com/ComPWA/qrules/actions/runs/4350315417/jobs/7600906057#step:3:79
dev =
    %(all)s
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop
    tox !=4.*; python_version <"3.8.0"  # https://github.com/ComPWA/qrules/actions/runs/4116409504/jobs/7106431526#step:3:92
    virtualenv !=20.16.*; python_version <"3.7.0"  # https://github.com/ComPWA/qrules/actions/runs/4116487921/jobs/7106603597#step:3:78
    virtualenv !=20.17.*; python_version <"3.7.0"  # https://github.com/ComPWA/qrules/actions/runs/4116447949/jobs/7106515800#step:3:78

[options.packages.find]
where = src

[options.package_data]
qrules =
    additional_definitions.yml
    particle-validation.json
    py.typed
